--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "framer-motion": "^11.0.3",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.6.0",
