--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.7",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.5",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.0.3",
     "next": "^14.2.3",
     "react": "^18",
